# home_sparkplug_host

./: .gitignore  README.md  docker-compose.yaml
client/: .eslintignore  Dockerfile  README.md  environment.d.ts  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: index.css  index.tsx
client/src/components/: Device.tsx  Group.tsx  Metric.tsx  Node.tsx  Property.tsx  PropertySet.tsx  TieredMetrics.tsx
client/src/redux/: store.ts
client/src/utils/: Hooks.tsx  SocketHandler.ts  sparkplugPayloadProto.d.ts  sparkplugPayloadProto.js  sparkplugbpayload.d.ts  sparkplugbpayload.js
client/src/views/: Application.tsx  ConfigView.tsx  DebugVIew.tsx  GarageView.tsx
server/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
server/src/: WebSocketServer.cpp  WebSocketServer.h  server.cpp
